--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
-  <div class="row">
-    <h1>{{user.knownAs}} Profile</h1>
+  <div class="row col-sm-12">
+      <h1>{{user.knownAs}} Profile</h1>
   </div>
   <div class="row">
     <div class="col-sm-4">
